fix wrap lines

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -133,7 +133,7 @@ body {
 
 .comment-item__content {
     margin-bottom: 15px;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .comment-item__close {
